--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "^6.10.0",
     "react-scripts": "^5.0.1",
     "react-scroll-to-bottom": "^4.2.0",
+    "sass": "^1.62.0",
     "socket.io-client": "^4.6.1",
     "web-vitals": "^3.3.1"
   },
